--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                      <img class="imgii mask" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ55IwcHFtyoXrEgH9op0FPPHaW7dRHNurxSTKVXduqsnG1ruL1vYlch_V0mGF0lyB5fMw&usqp=CAU" alt="">
                      <h2 class="smileyface"><span class="smileyspan">: )<span class="nose">7</span></span></h1>
                      </div>
-                     <img class="spch" src="./spch.png" alt="">
-                    <h3 class="sspch">Psst! Wanna see my face?</h3>
+<!--                      <img class="spch" src="./spch.png" alt=""> -->
+<!--                     <h3 class="sspch">Psst! Wanna see my face?</h3> -->
                 
             
         </div>
